--- a/src/components/view/style/ShowOverlay.module.css
+++ b/src/components/view/style/ShowOverlay.module.css
@@ -15,3 +15,10 @@
     justify-content: center;
     align-items: center;
 }
+
+.popup {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
