--- a/src/components/view/style/ShowEventsByType.module.css
+++ b/src/components/view/style/ShowEventsByType.module.css
@@ -14,8 +14,9 @@
     padding: 10px 10px;
     margin: 24px 24px;
     border-radius: 10px;
-    background: whitesmoke;
+    background: white;
     border: 2px solid rgba(var(--card-border-rgb), 1);
+    box-shadow: 5px 8px #e7e7e7;
 }
 
 .detail {
