--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
-  background-color: lightgray;
+  background-color: #f2f2f2;
 }
 
 .description {
