--- a/src/components/view/style/ShowEventsByType.module.css
+++ b/src/components/view/style/ShowEventsByType.module.css
@@ -1,9 +1,11 @@
 .font{
-    font-family: var(--font-sans);
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
-    line-height: 18px;
+    line-height: 20px;
+    align-items: center;
     letter-spacing: 0.5px;
+    font-family: 'Helvetica Neue';
+    margin-top: 5px;
 }
 
 .container {
@@ -31,7 +33,7 @@
 }
 
 .button {
-    padding: 5px 24px;
+    padding: 5px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,5 +48,56 @@
 .activity:hover {
     cursor: pointer;
 }
+.selected {
+    background: #815bfe;
+    color: white;
+    border: none;
+}
+.activity {
+    padding: 10px 5px;
+    border-radius: 5px;
+    border: 1px solid #e7e7e7;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    display: inline-block;
+    transition: background 200ms, border 200ms;
+}
+.date {
+    margin-top: 5px;
+}
+.title {
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 18px;
+    letter-spacing: 0.3px;
+    margin-bottom: 10px;
+}
 
+.selectBox {
+    /* Reset */
+    appearance: none;
+    border: 0;
+    outline: 0;
+    font: inherit;
+    /* Personalize */
+    width: 20em;
+    height: 3em;
+    padding: 0 4em 0 1em;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg)
+    no-repeat right 0.8em center / 1.4em,
+    linear-gradient(to left, rgba(255, 255, 255, 0.3) 3em, rgba(255, 255, 255, 0.2) 3em);
+    color: white;
+    border-radius: 0.25em;
+    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    }
+/* <option> colors */
+.optionBox {
+    color: inherit;
+    background-color: #320a28;
+}
+/* <option> hover */
+.optionBox:hover {
+    background-color: #320a28;
+}
 
