--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,12 +1,31 @@
+
 .main {
+  color: black;
   display: flex;
+  align-items: center;
+  min-height: 100vh;
+  padding: 6rem;
+  background-color: #f2f2f2;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-  background-color: #f2f2f2;
+  align-items: flex;
 }
+
+.mainFlex {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+}
+
+
+.leftSide,
+.rightSide {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
 
 .description {
   display: inherit;
