--- a/src/components/view/style/ShowEventsByType.module.css
+++ b/src/components/view/style/ShowEventsByType.module.css
@@ -23,27 +23,37 @@
 
 .detail {
     padding: 1rem 1.2rem;
+    background: white;
+    border: 2px solid rgba(var(--card-border-rgb), 1);
+    box-shadow: 5px 8px #e7e7e7;
+    position: relative;
     border-radius: var(--border-radius);
-    background: lightgrey;
-    border: 1px solid rgba(var(--card-border-rgb), 0);
     transition: background 200ms, border 200ms;
     margin-bottom: 20px;
     margin-top: 10px;
     position: relative;
 }
 
-.button {
-    padding: 5px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #815bfe;
-    border: 2px solid;
-    border-radius: 25px;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: white;
+.cssSpecial{
+    ox-sizing: border-box;
+    margin: 0;
+    padding: 4px 11px;
+    color: rgba(0, 0, 0, 0.88);
+    font-size: 14px;
+    line-height: 1.5714285714285714;
+    list-style: none;
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    min-width: 0;
+    background-color: #ffffff;
+    background-image: none;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d9d9d9;
+    border-radius: 6px;
+    transition: all 0.2s;
 }
 .activity:hover {
     cursor: pointer;
@@ -51,7 +61,7 @@
 .selected {
     background: #815bfe;
     color: white;
-    border: none;
+    border: 2px solid rgba(var(--card-border-rgb), 1);;
 }
 .activity {
     padding: 10px 5px;
@@ -66,7 +76,7 @@
     margin-top: 5px;
 }
 .title {
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     line-height: 18px;
     letter-spacing: 0.3px;
@@ -74,27 +84,31 @@
 }
 .error {
     color: red;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: bold;
     margin-top: 5px;
 }
 
 .selectBox {
-    /* Reset */
-    appearance: none;
-    border: 0;
-    outline: 0;
-    font: inherit;
-    /* Personalize */
-    width: 20em;
-    height: 3em;
-    padding: 0 4em 0 1em;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg)
-    no-repeat right 0.8em center / 1.4em,
-    linear-gradient(to left, rgba(255, 255, 255, 0.3) 3em, rgba(255, 255, 255, 0.2) 3em);
-    color: white;
-    border-radius: 0.25em;
-    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
-    cursor: pointer;
+    ox-sizing: border-box;
+    margin: 0;
+    padding: 4px 11px;
+    color: rgba(0, 0, 0, 0.88);
+    font-size: 14px;
+    line-height: 1.5714285714285714;
+    list-style: none;
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    min-width: 0;
+    background-color: #ffffff;
+    background-image: none;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d9d9d9;
+    border-radius: 6px;
+    transition: all 0.2s;
     }
 /* <option> colors */
 .optionBox {
