--- a/src/styles/CoursePlanner.module.css
+++ b/src/styles/CoursePlanner.module.css
@@ -1,10 +1,4 @@
-.coursePlanner {
-  background-color: rgba(255, 255, 255, 1);
-  padding: 66px 124px 42px 72px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
+
 
 .flexWrapperFile {
   padding-top: 5rem;
@@ -24,15 +18,6 @@
   font-family: var(--font-sans);
   letter-spacing: 0.5px;
   text-align: center;
-}
-.font{
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 20px;
-  align-items: center;
-  letter-spacing: 0.5px;
-  font-family: 'Helvetica Neue';
-  margin-top: 5px;
 }
 
 .formUI {
@@ -61,8 +46,8 @@
   padding-top: 2%;
   margin-bottom: 2px;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: safe;
 }
 .button {
   padding: 2px 10px;
@@ -154,4 +139,11 @@ justify-content: flex-end;
   border-radius: 25px;
   color: white;
   
+}
+.title {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 18px;
+  letter-spacing: 0.3px;
+  margin-bottom: 10px;
 }
