--- a/src/components/view/style/ShowEventsByType.module.css
+++ b/src/components/view/style/ShowEventsByType.module.css
@@ -31,11 +31,11 @@
     transition: background 200ms, border 200ms;
     margin-bottom: 20px;
     margin-top: 10px;
-    position: relative;
+    
 }
 
 .cssSpecial{
-    ox-sizing: border-box;
+    size-adjust: border-box;
     margin: 0;
     padding: 4px 11px;
     color: rgba(0, 0, 0, 0.88);
@@ -57,6 +57,8 @@
 }
 .activity:hover {
     cursor: pointer;
+    background-color: #e0e0e0; 
+    color: #815bfe; 
 }
 .selected {
     background: #815bfe;
@@ -76,7 +78,7 @@
     margin-top: 5px;
 }
 .title {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     line-height: 18px;
     letter-spacing: 0.3px;
@@ -90,25 +92,19 @@
 }
 
 .selectBox {
-    ox-sizing: border-box;
-    margin: 0;
-    padding: 4px 11px;
-    color: rgba(0, 0, 0, 0.88);
-    font-size: 14px;
-    line-height: 1.5714285714285714;
-    list-style: none;
-    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    min-width: 0;
-    background-color: #ffffff;
-    background-image: none;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #d9d9d9;
-    border-radius: 6px;
-    transition: all 0.2s;
+    /* Reset */
+    appearance: none;
+    border: 0;
+    outline: 0;
+    font: inherit;
+    /* Personalize */
+    width: 20em;
+    height: 3em;
+    padding: 0 4em 0 1em;
+    color: white;
+    border-radius: 0.25em;
+    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
     }
 /* <option> colors */
 .optionBox {
