--- a/src/styles/CoursePlanner.module.css
+++ b/src/styles/CoursePlanner.module.css
@@ -1,10 +1,30 @@
 
-
+.main {
+ 
+  display: flex;
+ 
+  min-height: 100vh;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  padding-right: 2rem;
+  background-color: #f2f2f2;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex;
+}
 .flexWrapperFile {
   padding-top: 5rem;
   padding-bottom: 2rem;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+}
+.flexWrapperDSL {
+  padding-top: 5rem;
+  
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
 }
 .flexWrapperLegend {
   margin-bottom: 15px;
@@ -41,7 +61,29 @@
   text-align: center;
   font-family: 'Helvetica Neue';
 }
+.textInsideConfiguration{
+  background:white;
+  white-space: pre-wrap;
 
+  display: flex;
+  border: 1px solid;
+  height: 200px;
+  width: 500px;
+  letter-spacing: 1px;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-right: 1rem;
+}
+.textInsideDSL{
+  height: 500px;
+  width: 500px;
+  letter-spacing: 1px;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-right: 1rem;
+}
 .flexWrapperButton {
   padding-top: 2%;
   margin-bottom: 2px;
@@ -61,7 +103,7 @@
 }
 .buttonCancel {
   padding: 2px 10px;
-  display: flexbox;
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #815bfe;
@@ -104,12 +146,33 @@ justify-content: flex-end;
   position: relative;
 }
 .h2{
-  font-size: 18px;
+  font-weight: 500;
+  font-size: 30px;
   font-weight: bold;
   line-height: 15px;
   letter-spacing: 0.3px;
   margin-bottom: 10px;
-  color: black;
+  font-family: 'Helvetica Neue';
+}
+.h3{
+  font-weight: 500;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 15px;
+  letter-spacing: 0.3px;
+  margin-bottom: 10px;
+  font-family: 'Helvetica Neue';
+}
+.h4{
+  height: 40px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 15px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.5px;
+  text-align: center;
+  font-family: 'Helvetica Neue';
 }
 .flexWrapperButtonBottom{
   padding-top: 2%;
@@ -122,7 +185,7 @@ justify-content: flex-end;
   padding: 2px 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   background-color: #4f4e53;
   border: 2px solid;
   border-radius: 10px;
@@ -133,17 +196,45 @@ justify-content: flex-end;
   padding: 2px 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   background-color: #815bfe;
   border: 2px solid;
-  border-radius: 25px;
+  border-radius: 10px;
   color: white;
   
 }
 .title {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   line-height: 18px;
   letter-spacing: 0.3px;
   margin-bottom: 10px;
 }
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  list-style: none;
+  padding: 10px 10px;
+  margin-top:24px;
+  margin-bottom: 24px;
+  border-radius: 10px;
+  background: white;
+  border: 2px solid rgba(var(--card-border-rgb), 1);
+  box-shadow: 5px 8px #e7e7e7;
+}
+
+.test1{
+  flex: 1;
+  font-weight: normal;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-inline-end: 18px;
+  position: relative;
+  user-select: none;
+  padding: 0;
+    line-height: 30px;
+    transition: all 0.3s;
+}
+
