--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,10 @@
-
 .main {
-  color: black;
   display: flex;
-  align-items: center;
   min-height: 100vh;
-  padding: 6rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  padding-right: 2rem;
   background-color: #f2f2f2;
   flex-direction: column;
   justify-content: space-between;
