--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,14 +83,13 @@
 }
 
 html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+body,
+#__next {
+  height: 100%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background-color: #f2f2f2;
+main {
+  min-height: 100vh;
 }
 
 a {
@@ -100,6 +99,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: white;
   }
 }
