--- a/src/styles/CoursePlanner.module.css
+++ b/src/styles/CoursePlanner.module.css
@@ -30,14 +30,15 @@
   margin-bottom: 15px;
   margin-top: 25px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-content: center;
+  align-self: flex-start;
   font-size: 20px;
   font-weight: 500;
   line-height: 18px;
   font-family: var(--font-sans);
   letter-spacing: 0.5px;
-  text-align: center;
+  text-align: flex-start;
 }
 
 .formUI {
@@ -91,6 +92,7 @@
   align-items: flex-start;
   justify-content: safe;
 }
+
 .button {
   padding: 2px 10px;
   display: flex;
@@ -136,14 +138,20 @@ justify-content: flex-end;
 
 
 .calendarDiv {
-  padding: 10px 10px;
 
+  margin-top:42px;
+ 
+  border-radius: 10px;
+  
+  padding: 10px 10px;
+ 
+  border-radius: 10px;
   background: white;
   border: 2px solid rgba(var(--card-border-rgb), 1);
   box-shadow: 5px 8px #e7e7e7;
-  height: 80%; 
+  height: 100%; 
   width: 100%;
-  position: relative;
+  position: flex;
 }
 .h2{
   font-weight: 500;
@@ -153,6 +161,8 @@ justify-content: flex-end;
   letter-spacing: 0.3px;
   margin-bottom: 10px;
   font-family: 'Helvetica Neue';
+
+  color: black;
 }
 .h3{
   font-weight: 500;
