--- a/src/styles/CoursePlanner.module.css
+++ b/src/styles/CoursePlanner.module.css
@@ -170,12 +170,13 @@ justify-content: flex-end;
 }
 .h3{
   font-weight: 500;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
   line-height: 15px;
   letter-spacing: 0.3px;
   margin-bottom: 10px;
   font-family: 'Helvetica Neue';
+  color: black;
 }
 .h4{
   height: 40px;
@@ -187,6 +188,7 @@ justify-content: flex-end;
   letter-spacing: 0.5px;
   text-align: center;
   font-family: 'Helvetica Neue';
+  color: black;
 }
 .flexWrapperButtonBottom{
   padding-top: 2%;
@@ -195,6 +197,27 @@ justify-content: flex-end;
   align-items: flex-end;
   justify-content: safe;
 }
+.flexWrapperAffi{
+  display: flex;
+  margin-bottom: 2px;
+  font-size: 18px;
+  font-weight: bold;
+  justify-content: center;
+  
+}
+.flexWrapperSuggestionBox{
+  display: flex;
+  margin-bottom: 2px;
+  font-size: 18px;
+ 
+  justify-content: space-between;
+  
+}
+.flexWrapperAffiCoursLab{
+  display: row;
+  margin-bottom: 1rem;
+  
+ }
 .hidden {
   padding: 2px 10px;
   display: flex;
